# Mini-2

./: CMakeLists.txt
C++/: CMakeLists.txt
C++/A/: serverA.cpp
C++/B/: serverB.cpp
C++/C/: serverC.cpp
Python/: client1.py  client2.py  client3.py  service_pb2.py  service_pb2_grpc.py
proto/: service.proto
